syntax = "proto3";

package auth;

option go_package = "github.com/fr1gn/backend/gobooking/proto/auth;auth";

service AuthService {
  rpc RegisterUser (RegisterRequest) returns (AuthResponse);
  rpc LoginUser (LoginRequest) returns (AuthResponse);
  rpc ValidateToken (TokenRequest) returns (ValidateResponse);
  rpc SendVerificationEmail (EmailRequest) returns (GenericResponse);
}

message RegisterRequest {
  string full_name = 1;
  string email = 2;
  string password = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message TokenRequest {
  string token = 1;
}

message EmailRequest {
  string email = 1;
}

message AuthResponse {
  string access_token = 1;
  string refresh_token = 2;
  string message = 3;
}

message ValidateResponse {
  bool is_valid = 1;
  string user_id = 2;
}

message GenericResponse {
  string message = 1;
}
